@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.548 2008/05/16 12:22:08 nm4 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.549 2008/07/18 17:55:42 fanf2 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -54,7 +54,8 @@ NM/05 Bugzilla 437: Prevent Maildix aux files being created with mode 000
 NM/05 Bugzilla 598: Improvedment to Dovecot authenticator handling.
       Patch provided by Jan Srzednicki
 
-
+TF/05 Leading white space used to be stripped from $spam_report which
+      wrecked the formatting. Now it is preserved.
 
 
 Exim version 4.69
